コココソフト

--- a/docs/オンボーディング_検討.md
+++ b/docs/オンボーディング_検討.md
@@ -9,10 +9,54 @@
 ## パターン一覧（初期）
 
 - パターン 1：モーダル形式での図解+テキスト形式ヘルプ
+
   - 概要: ユーザーに操作手順を図とテキストで示すモーダルを表示。ステップ毎の説明と図を組み合わせる。
   - 実装候補: 既存の `Onboarding` コンポーネントを拡張してモーダル表現を追加。
 
+- パターン 2：入力タイトル横のツールチップ型ヘルプアイコン
+  - 概要: 各入力欄やセクション見出しの右に小さなクエスチョンアイコン（丸ボタン）を配置し、ホバー／フォーカスで簡易説明を表示する。
+  - 実装: 共通コンポーネント `TooltipHelpButton` を追加しました。コンポーネントは `frontend/src/common/components/TooltipHelpButton/TooltipHelpButton.tsx` にあります。
+  - 使い方例:
+
+```tsx
+import TooltipHelpButton from "frontend/src/common/components/TooltipHelpButton";
+
+<label>
+  顧問先名
+  <TooltipHelpButton tip="顧問先の正式名称を入力してください" />
+</label>;
+```
+
+- 備考: このパターンは画面ごとに個別に配置を行います（自動挿入は未実装）。今後、フォーム共通レイアウトや入力ヘルパーに組み込むことで一括展開する案も検討します。
+
+  - 実装状況（初回適用）:
+    - frontend/src/common/components/TooltipHelpButton/TooltipHelpButton.tsx
+    - frontend/src/features/client/components/ClientForm.tsx
+    - frontend/src/features/client/ClientPage.tsx
+    - frontend/src/features/settings/components/ProfilePanel.tsx
+    - frontend/src/features/settings/components/PasswordPanel/PasswordPanel.tsx
+    - frontend/src/features/settings/components/PasswordPanel/NewPasswordInput.tsx
+    - frontend/src/features/patrol-audit/components/panel/FirstPanel.tsx
+    - frontend/src/features/patrol-audit/components/panel/SecondPanel.tsx
+    - frontend/src/features/patrol-audit/components/panel/ThirdPanel.tsx
+    - frontend/src/features/patrol-audit/components/panel/FourthPanel.tsx
+    - frontend/src/features/patrol-audit/components/panel/FifthPanel.tsx
+    - frontend/src/features/patrol-audit/components/PatrolAuditHistoryPage.tsx
+
 > 備考: 今後このドキュメント内にパターンを追加していきます（パターン 2, 3 ...）。
+
+- パターン 3：プロダクトツアー（Product Tour）
+  - 概要: 画面ごとにステップ形式で主要要素を順に案内するガイド機能。初回オンボーディングや機能追加案内に向く。
+  - 実装: 新しい `ProductTour` コンポーネントを追加しました（モーダル形式の簡易ツアー）。ページキーを渡して該当ページのツアーを開けます。
+  - 設置: 各画面のヘッダーに `パターン３` ボタンを追加し、押下で該当ページのツアーを開始します。
+  - 実装状況（初回適用）:
+    - frontend/src/common/components/ProductTour/ProductTour.tsx
+    - frontend/src/common/components/ProductTour/controller.ts
+    - frontend/src/features/dashboard/DashboardContent.tsx （ボタン追加）
+    - frontend/src/features/settings/SettingsPage.tsx （ボタン追加）
+    - frontend/src/features/client/ClientPage.tsx （ボタン追加）
+    - frontend/src/features/patrol-audit/components/PatrolAuditListPage.tsx （ボタン追加）
+    - frontend/src/pages/ChatPage.tsx （ボタン追加）
 
 ## 対象画面と現在の配置状況
 
