--- a/docs/オンボーディング_検討.md
+++ b/docs/オンボーディング_検討.md
@@ -9,7 +9,6 @@
 ## パターン一覧（初期）
 
 - パターン 1：モーダル形式での図解+テキスト形式ヘルプ
-
   - 概要: ユーザーに操作手順を図とテキストで示すモーダルを表示。ステップ毎の説明と図を組み合わせる。
   - 実装候補: 既存の `Onboarding` コンポーネントを拡張してモーダル表現を追加。
 
@@ -28,7 +27,6 @@ import TooltipHelpButton from "frontend/src/common/components/TooltipHelpButton"
 ```
 
 - 備考: このパターンは画面ごとに個別に配置を行います（自動挿入は未実装）。今後、フォーム共通レイアウトや入力ヘルパーに組み込むことで一括展開する案も検討します。
-
   - 実装状況（初回適用）:
     - frontend/src/common/components/TooltipHelpButton/TooltipHelpButton.tsx
     - frontend/src/features/client/components/ClientForm.tsx
@@ -57,34 +55,32 @@ import TooltipHelpButton from "frontend/src/common/components/TooltipHelpButton"
     - frontend/src/features/client/ClientPage.tsx （ボタン追加）
     - frontend/src/features/patrol-audit/components/PatrolAuditListPage.tsx （ボタン追加）
     - frontend/src/pages/ChatPage.tsx （ボタン追加）
+- パターン 3：プロダクトツアー（Product Tour） — 詳細は `docs/プロダクトツアー仕様書.md` を参照してください。
 
 ## 対象画面と現在の配置状況
 
 以下はリポジトリ内の代表的な画面一覧と、`パターン１` ボタンの設置状況です。
 
 - ダッシュボード — 設置済み
-
   - ファイル: frontend/src/features/dashboard/DashboardContent.tsx
   - 配置場所: `ダッシュボード` タイトルの右側に小さな `パターン１` ボタンを配置。
 
 - 設定 — 設置済み
-
   - ファイル: frontend/src/features/settings/SettingsPage.tsx
   - 配置場所: ヘッダーの右側（`DashboardLayout` の `actionButton`）に `パターン１` を配置。
 
 - 顧問先管理（顧問先登録／編集） — 設置済み
-
   - ファイル: frontend/src/features/client/ClientPage.tsx
   - 配置場所:
     - メインヘッダー右側（`顧問先登録` ボタンの横）に `パターン１` を配置（登録用）。
     - 編集画面（メイン領域で編集しているとき）では、上部左端に `パターン１` ボタンを追加（編集時の左上最も近い位置）。
 
 - 巡回監査報告（一覧/作成） — 設置済み
-
   - ファイル: frontend/src/features/patrol-audit/components/PatrolAuditListPage.tsx
   - 配置場所: 作成ボタンの隣（ヘッダー右側）に `パターン１` を追加。
 
 - チャット — 設置済み
+  <!-- 詳細は docs/プロダクトツアー仕様書.md に移動しました -->
   - ファイル: frontend/src/pages/ChatPage.tsx
   - 配置場所: 画面上部（`Onboarding` 表示領域の近く）に小さな `パターン１` ボタンを追加。
 
@@ -93,6 +89,29 @@ import TooltipHelpButton from "frontend/src/common/components/TooltipHelpButton"
 - `Onboarding` コンポーネントにモーダル形式（図解 + テキスト）を実装し、`パターン１` の動作を統一する。
 - 画面ごとのユーザー行動データ（クリック数、表示有無）を計測するためのイベント設計。
 - ボタン配置のバリエーション（ツールチップ、ヘルプアイコン、常駐パネル）を追加して比較検証する。
+
+## パターン3（拡張）: プロダクトツアー基盤案（実装済み・サンプル）
+
+上位要件に基づき、プロダクトツアーを容易に拡張できる基盤を追加しました。以下は追加したファイルと簡単な説明です。
+
+- フォルダ構成例（リポジトリ内）:
+  - `frontend/src/tour/tourTypes.ts` — `Tour`, `TourStep`, `RequiredAction` 型を定義
+  - `frontend/src/tour/TourProvider.tsx` — `TourProvider` / `useTour`（ツアー状態管理、開始／次へ／前へ／スキップ／完了など）
+  - `frontend/src/tour/TourOverlay.tsx` — 対象要素をハイライトするオーバーレイ（穴開き風の強調）
+  - `frontend/src/tour/TourStepPopover.tsx` — 吹き出し（コーチマーク）表示コンポーネント（次へ／戻る／スキップ／完了ボタン）
+  - `frontend/src/tour/tours/sampleTour.ts` — サンプルツアー定義（TS オブジェクト）
+
+簡単な動作設計:
+
+- `TourProvider` を `App` のルートにラップして使用します。`useTour().startTour(sampleTour)` を呼ぶとツアーが開始されます。
+- 各ステップの `targetSelector` を指定すると `TourOverlay` が対象要素の位置を計算してハイライト表示し、`TourStepPopover` を対象位置付近に表示します。対象が見つからない場合は画面中央にポップオーバーを表示します。
+- `requiredAction` を設定すると、例えば `{ type: 'click', selector: '...' }` の場合はその要素がクリックされるまで `次へ` を無効化する拡張ポイントがあります（現状は設計のための型とフックポイントを用意済み）。
+
+今後の推奨作業:
+
+- `TourProvider` に `requiredAction` の待ち受けロジック（イベントリスナ登録）を実装して、ユーザーが指定の操作を完了しないと次へ進めない挙動を追加。
+- ルーティング（React Router 等）を横断するステップの場合、`targetSelector` が見つかるまでルート遷移をトリガーする仕組みを追加。
+- ストレージ（localStorage / API）にツアー完了フラグを保存して再表示制御を行う（初回のみ表示 etc）。
 
 ---
 
